--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -64,18 +64,38 @@ font-size: 18px;
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    width: 100%;
-}
-section .div{
-height: 1500 px;
-width: 100%;
-background-color: #eceff8;
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    /* justify-content: space-between; */
+    /* align-items: center; */
+    /* list-style: none; */
+    /* width: 100%; */
+    /* height: 1500 px; */
+    /* width: 100%; */
+    background-color: #eceff8;
 /* light artic ice */
  /* background-color: #F2FFFA;  */
 /* light aquamarine */
 }
+
+.heading
+{
+ padding-left: 600px;
+ padding right: 600px;
+ align-items: center; 
+ justify-content: center;  
+}
+
+.inquiry 
+{
+padding-left: 300px;
+padding-right: 600px;
+}
+
+ .interest 
+  {  
+    padding-left: 330px; 
+    padding-right: 330px;  
+    align-items: center;   
+    justify-content: center;    
+ }  
