--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -129,8 +129,12 @@ width: 50%;
 
 img {
     width:390px;
-    height:390px;
+    height:300px;
     background: url(http://goo.gl/vyAs27) no-repeat scroll 0 0;
   }
 
+.stockDisplay
 
+{
+    height:90px;
+}
