--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -64,14 +64,7 @@ font-size: 18px;
 }
 
 .container {
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    /* justify-content: space-between; */
-    /* align-items: center; */
-    /* list-style: none; */
-    /* width: 100%; */
-    /* height: 1500 px; */
-    /* width: 100%; */
+  
     background-color: #eceff8;
 /* light artic ice */
  /* background-color: #F2FFFA;  */
@@ -104,14 +97,12 @@ width: 50%;
 .flexContainer
 {
 /* flex box parent */
-    display: flex; */
-    flex-wrap: wrap; */
-    justify-content: space-between; */
-    align-items: center; */
-    list-style: none; */
-    width: 100%; */
-    /* height: 1500 px; */
-    /* width: 100%; */
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: space-between; 
+    align-items: center; 
+    list-style: none; 
+    width: 100%; 
 /* light artic ice */
  /* background-color: #F2FFFA;  */
 /* light aquamarine */
@@ -122,19 +113,33 @@ width: 50%;
 {
     padding-left: 180px; 
     padding-right: 180px;
-width: 50%;
-    /* placehoder div for car pictures */
+    width: 50%;
+    display: flex; 
+    flex-wrap: wrap; 
+    flex-direction: column;
+    justify-content: space-between; 
+    align-items: center; 
+    list-style: none; 
 }
 
 
 img {
     width:390px;
     height:300px;
-    background: url(http://goo.gl/vyAs27) no-repeat scroll 0 0;
+    /* background: url(http://goo.gl/vyAs27) no-repeat scroll 0 0; */
   }
+
+.imgDisplay
+{
+    width:390px;
+    height:300px;
+}
+
 
 .stockDisplay
 
 {
     height:90px;
 }
+
+
