--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    padding: 0;
+    padding: auto;
     margin: 0;
 }
 
@@ -74,7 +74,7 @@ font-size: 18px;
 .heading
 {
  padding-left: 600px;
- padding right: 600px;
+ padding-right: 600px;
  align-items: center; 
  justify-content: center;  
 }
@@ -86,8 +86,9 @@ padding-right: 30px;
 width: 50%;
 }
 
- .interest 
+.interest 
   {  
+   margin:auto;
     padding-left: 330px; 
     padding-right: 330px;  
     align-items: center;   
@@ -112,7 +113,7 @@ width: 50%;
 .carPictures
 {
     padding-left: 180px; 
-    padding-right: 180px;
+    padding-right: 330px;
     width: 50%;
     display: flex; 
     flex-wrap: wrap; 
