--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -20,7 +20,7 @@ header h1
 font-family: 'Kayak';
 padding-top: 9px;
 padding-bottom: 9px;
-padding-left:15px;
+
 align-items: center;
 color: royalblue;
     /* here is from hriseon */
@@ -66,6 +66,7 @@ font-size: 18px;
 .container {
   
     background-color: #eceff8;
+    margin:auto;
 /* light artic ice */
  /* background-color: #F2FFFA;  */
 /* light aquamarine */
@@ -73,17 +74,19 @@ font-size: 18px;
 
 .heading
 {
- padding-left: 600px;
- padding-right: 600px;
- align-items: center; 
- justify-content: center;  
+    padding-top: 50px;
+    align-items: center; 
+    justify-content: center;  
 }
 
 .inquiry 
 {
-padding-left: 240px;
-padding-right: 30px;
+
 width: 50%;
+}
+
+.inquiryDiv{
+    margin:100px;
 }
 
 .interest 
@@ -95,10 +98,10 @@ width: 50%;
     justify-content: center;    
  }  
 
-.flexContainer
+/*.flexContainer
 {
 /* flex box parent */
-    display: flex; 
+ /*   display: flex; 
     flex-wrap: wrap; 
     justify-content: space-between; 
     align-items: center; 
@@ -112,8 +115,7 @@ width: 50%;
 
 .carPictures
 {
-    padding-left: 180px; 
-    padding-right: 330px;
+
     width: 50%;
     display: flex; 
     flex-wrap: wrap; 
