--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -125,6 +125,7 @@ img {
     width:390px;
     height:300px;
     /* background: url(http://goo.gl/vyAs27) no-repeat scroll 0 0; */
+    object-fit: cover
   }
 
 .imgDisplay
