--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -268,4 +268,34 @@ img {
   color: #4a4a4a;
 }
 
+/* Footer */
+footer {
+  padding-left: 70px; 
+  padding-right: 70px; 
+  background: white;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+}
+footer h2 {
+  color: black;
+  font-size: 30px;
+  margin: 0;
+}
+footer div {
+  line-height: 1.5;
+  text-align: right;
+}
+footer a {
+  color: black;
+  padding: 5px;
+}
+
+footer img {
+  height: 15px;
+  width: 15px;
+}
+
 
