--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -178,59 +178,22 @@ img {
     cursor: pointer;
   }
 
-  /* Contact us */
   
-  .contact {
-    background: var(--secondary-color);
-  }
-  
-  .contact h2 {
-    color: var(--primary-color);
-  }
-  
-  .contact-info {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  
-  .contact-info > * {
-    flex: 1;
-    margin: 15px;
-  }
-  
-  .contact-info iframe {
-    height: 400px;
-  }
-  
-  .contact-info div {
-    color: white;
-  }
-  
-  .contact-info h3 {
-    color: var(--primary-color);
-    font-size: 32px;
-  }
-  
-  .contact-info p, .contact-info address {
-    margin: 20px 0;
-    line-height: 1.5;
-    font-size: 16px;
-    font-style: normal;
-  }
-  
-  .contact-info a {
-    color: var(--primary-color);
-  }
 
 /* Contact Us Section */
 
 .contact {
-  background: #f3ede9;
+  background: white;
 }
 
 .contact h2 {
-  color: #4a4a4a;
+  color: #000000;
+  font-weight: 400;
+  font-size: 48px;
+  /* border-bottom: 3px solid; */
+  padding-bottom: 20px; 
+  text-align: center;
+  margin: 0 auto 35px auto;
 }
 
 .contact-info {
@@ -249,11 +212,11 @@ img {
 }
 
 .contact-info div {
-  color:#4a4a4a;
+  color: #4b4836;
 }
 
 .contact-info h3 {
-  color: #4a4a4a;
+  color: #000000;
   font-size: 32px;
 }
 
@@ -265,7 +228,7 @@ img {
 }
 
 .contact-info a {
-  color: #4a4a4a;
+  color: #000000;
 }
 
 /* Footer */
