--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -120,8 +120,20 @@ display: flex;
 /* padding-right: 60px;   */
 /* } */
 
+.landingPage
+{
 
-
+  background-image: url("../images/car-2.jpeg"); 
+  width: 90%; 
+  height: 699px;
+  background-size: cover;
+  background-position: center;
+  margin-left: 75px;
+  margin-right: 75px;
+                     /* <------ */
+ 
+ 
+}
 .container {
     margin: auto;
     width: 100%;
