--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -111,6 +111,14 @@ display: flex;
 
 #buttonClr
 {
+  
+  border: none;
+  color: white;
+  padding: 1.85px 2px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
   background-color: aquamarine;
 }
 
@@ -132,12 +140,42 @@ display: flex;
   height: 699px;
 }
 
+#year 
+{
+  background-color: #D1D8E2;
+}
+#make 
+{
+  background-color: #D1D8E2;
+}
+
+#mileage
+{
+  background-color: #D1D8E2;
+}
+
+#submitBtn
+{
+  background-color:#48a37e;
+  border: none;
+  color: white;
+  padding: 1.85px 2px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  
+}
+
+
+
 .row-inquiry
 {
   padding-top: 120px;
   padding-bottom: 120px;
   padding-left: 510px;
   padding-right: 510px; 
+  
 }
 
 
@@ -191,6 +229,18 @@ padding-right: 480px;
   color: black;
 }
 
+#carDisplay
+{
+  background-color:  #90BED4;
+  border: 1px solid #BFBFBF;
+  box-shadow: 10px 10px 8px #888888;
+  /* box-shadow: 10px 10px 5px #aaaaaa; */
+}
+
+
+
+
+
 .carPictures
 {
 
@@ -208,14 +258,16 @@ img {
     width:390px;
     height:300px;
     /* background: url(http://goo.gl/vyAs27) no-repeat scroll 0 0; */
-    object-fit: cover
+    object-fit: cover;
+
   }
 
 .imgDisplay
 {
     width:390px;
     height:300px;
-}
+
+  }
 
 
 .stockDisplay
