--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -251,7 +251,7 @@ display: flex;
     {         
       color:blueviolet; 
       font-weight: bold;
-      font-size: 30px;
+      font-size: 36px;
       height: 300px;
      width: 100%;
 
@@ -511,6 +511,44 @@ img {
   width: 15%;
   background-color:#9DBED4;
 }
+
+#window1
+{
+  border: none;
+  padding: 5px;
+  font: 24px/36px sans-serif;
+  width: 27.50%;
+  height: 100%;
+  overflow: scroll;
+  }
+  
+  #window2
+  {
+    border: none;
+    padding: 5px;
+    font: 24px/36px sans-serif;
+    width: 27.50%;
+    height: 100%;
+    overflow: scroll;
+    }
+
+
+
+  ::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+    }
+    
+    ::-webkit-scrollbar-track {
+    background: #f5f5f5;
+    border-radius: 10px;
+    }
+    
+    ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #ccc;  
+    }
+
 
 #toolSubmit 
 {
