--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -164,6 +164,18 @@ display: flex;
   height: 758px;
 }
 
+#vehicle
+{
+   background-image: url("../images/car-2.jpeg");
+   background-size: cover;
+                     /* <------ */
+                     
+   background-repeat:   no-repeat;
+   background-position: center center; 
+  
+
+}
+
 #year 
 {
   background-color: #D1D8E2;
@@ -210,12 +222,22 @@ display: flex;
     width: 100%;
     height: 378px;
     align-content: center;
-  
+    background-image: url("../images/car-1.jpeg");
+    background-size: cover;
+                      /* <------ */
+                      
+    background-repeat:   no-repeat;
+    background-position: center center; 
+   
+ 
  
 /* light artic ice */
  /* background-color: #F2FFFA;  */
 /* light aquamarine */
 }
+
+
+
 
 .heading
 {    
@@ -499,7 +521,9 @@ img {
   margin: 0 auto 35px auto;
 }
 
-
+#frame{
+  height: 60px; 
+}
 
 .contact-info iframe {
   height: 400px;
@@ -513,13 +537,14 @@ img {
 
 .contact-info p, .contact-info address {
   margin: 20px 0;
-  line-height: 1.5;
-  font-size: large;
+  line-height: 1;
+  font-size: small;
   font-weight: bolder;
   font-style: normal;
   color: blueviolet;
 
 }
+
 
 
 
@@ -533,6 +558,7 @@ footer {
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
+ 
 }
 footer h2 {
   color: black;
