--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,7 +4,6 @@
     margin: 0;
 }
 
-
 #logoSize
 {
  
@@ -16,8 +15,20 @@
   background-repeat:   no-repeat;
   background-position: center center; 
  
-
 }
+
+@media only screen and (max-width: 600px) {
+#logoSize 
+  {
+    float: left;
+    width: 100%; 
+  }
+}
+
+
+
+
+
 
 #logo
 {
@@ -35,6 +46,18 @@
   
   /* padding-bottom: 15px; */
 }
+
+@media only screen and (max-width: 600px) {
+  #logo
+    {
+      float: left;
+      width: 100%; 
+    }
+  }
+  
+
+
+
 /* old code starts */
 .heading-text {
     justify-content:center;
@@ -55,6 +78,9 @@
     height: 63px;
    
 } 
+
+
+
 .menu2 {
     width: 77%;
     font-family: 'Helvetica', 'Lucida Sans Unicode', 'Lucida Sans', Arial;
@@ -94,6 +120,8 @@ header nav ul {
     padding-left: .1px; 
     padding-right: 15px;  
      } 
+
+     
 
 header nav ul li   
  {  
@@ -147,12 +175,17 @@ display: flex;
   padding-bottom: 4.5px;
   
 }
+
+
 #search2
 {
   align-content: center;
   padding-left: 15px;
   padding-right: 36px;
 }
+
+
+
 #search3
 {
   align-content: center;
@@ -181,6 +214,9 @@ display: flex;
 {
   background-color: #D1D8E2;
 }
+
+
+
 #make 
 {
   background-color: #D1D8E2;
@@ -209,12 +245,49 @@ display: flex;
 
 .row-inquiry
 {
-  padding-top: 93px;
-  padding-bottom: 145px;
-  padding-left: 510px;
-  padding-right: 510px; 
+  padding-top: 195px;
+  padding-bottom: 171px;
+width: 100%;
+  display: flex; 
+  flex-wrap: wrap; 
+  flex-direction: row;
+  justify-content: space-between; 
+  align-items: center; 
+  list-style: none; 
   
 }
+
+#searchBox1
+{
+  
+padding-left: 11.1%;
+width: 50%;
+}
+
+@media only screen and (max-width: 600px) {
+  #searchBox1
+    {
+      float: left;
+      width: 100%; 
+    }
+  }
+
+
+#searchBox2
+{
+
+width: 50%;
+
+}
+@media only screen and (max-width: 600px) {
+  #searchBox2
+    {
+      float: left;
+      width: 100%; 
+    }
+  }
+
+
 
 /* add info here equal length height-start */
 .container{
@@ -233,8 +306,8 @@ display: flex;
                       
     background-repeat:   no-repeat;
     background-position: center center; 
-   
- 
+  
+
  
 /* light artic ice */
  /* background-color: #F2FFFA;  */
@@ -252,7 +325,6 @@ display: flex;
                     
   background-repeat:   no-repeat;
   background-position: center center; 
- 
 
 
 /* light artic ice */
@@ -269,6 +341,7 @@ display: flex;
     justify-content: center;  
 }
 
+
 #head1
 
   {    
@@ -278,6 +351,20 @@ display: flex;
        justify-content: center; 
        color: orchid; 
    }
+   @media only screen and (max-width: 600px) {
+    #head1
+      {
+        padding-left: 27%;
+        padding-right: 33%;
+         align-items: center; 
+           justify-content: center; 
+           color: orchid; 
+        
+      }
+    }
+ 
+
+   
    #head2
 
    {    
@@ -287,32 +374,29 @@ display: flex;
      justify-content: center; 
      color: orchid; 
     }
-    #head3
+    @media only screen and (max-width: 600px) {
+      #head2
+        {
+          padding-left: 15%;
+          padding-right: 30;
+          align-items: center; 
+          justify-content: center; 
+          color: orchid; 
+          
+        }
+      }
 
-   {    
-     padding-left: 27%;
-     padding-right: 25%;
-     align-items: center; 
-     justify-content: center;  
-    }
+    
 
-    /* check if centered both below */
-    #head4
-    {         
-      color:blueviolet; 
-      font-weight: bold;
-      font-size: 36px;
-      height: 300px;
-     width: 100%;
 
-     }
 
- 
 .inquiry 
 {
 
 width: 62%;
 }
+
+
 
 .inquiryDiv{
     margin:100px;
@@ -328,6 +412,19 @@ padding-right: 39%;
 width: 100%;
  }
 
+ @media only screen and (max-width: 600px) {
+  #interest1
+    {
+      align-items: center;   
+justify-content: center;  
+padding-left: 35%;
+padding-right: 40%;
+width: 100%;
+       
+    }
+  }
+ 
+
  #interest2 
   { 
 align-items: center;   
@@ -336,6 +433,20 @@ padding-left: 42.5%;
 padding-right: 40.5%;
 width: 100%;
  }
+ @media only screen and (max-width: 600px) {
+  #interest2 
+    {
+      align-items: center;   
+justify-content: center;  
+padding-left: 35%;
+padding-right: 40%;
+width: 100%;
+       
+    }
+  }
+
+
+
  #interest3 
   { 
 align-items: center;   
@@ -344,6 +455,20 @@ padding-left: 43.5%;
 padding-right: 42.5%;
 width: 100%;
  }
+
+ @media only screen and (max-width: 600px) {
+  #interest3
+    {
+      align-items: center;   
+      justify-content: center;  
+      padding-left: 35%;
+      padding-right: 40%;
+      width: 100%;
+
+    }
+  }
+
+
  #interest4
   { 
 align-items: center;   
@@ -352,6 +477,20 @@ padding-left: 48.15%;
 padding-right: 48.85%;
 width: 100%;
  }
+
+ @media only screen and (max-width: 600px) {
+  #interest4
+    {
+      align-items: center;   
+      justify-content: center;  
+      padding-left: 43.15%;
+      padding-right: 43.85%;
+      width: 100%;
+
+    }
+  }
+
+
 
  #stockNumber 
  {
@@ -396,6 +535,20 @@ width: 100%;
     padding-right: 39.02%;
     width: 100%;
 }
+@media only screen and (max-width: 600px) {
+  #payment1
+    {
+      align-items: center;   
+      justify-content: center;  
+      padding-left: 35%;
+      padding-right: 40%;
+      width: 100%;
+
+    }
+  }
+
+
+
 #payment2
 {
   align-items: center;   
@@ -404,6 +557,21 @@ width: 100%;
     padding-right: 39.42%;
     width: 100%;
 }
+
+@media only screen and (max-width: 600px) {
+  #payment2
+    {
+      align-items: center;   
+      justify-content: center;  
+      padding-left: 35%;
+      padding-right: 40%;
+      width: 100%;
+
+    }
+  }
+
+
+
 #payment3
 {
   align-items: center;   
@@ -412,6 +580,20 @@ width: 100%;
     padding-right: 36.02%;
     width: 100%;
 }
+
+@media only screen and (max-width: 600px) {
+  #payment3
+    {
+      align-items: center;   
+    justify-content: center;  
+    padding-left: 43.92%;
+    padding-right: 36.02%;
+    width: 100%;
+
+    }
+  }
+
+
 #payment4
 {
   align-items: center;   
@@ -420,6 +602,19 @@ width: 100%;
     padding-right: 39.82%;
     width: 100%;
 }
+@media only screen and (max-width: 600px) {
+  #payment4
+    {
+      align-items: center;   
+    justify-content: center;  
+    padding-left: 42.02%;
+    padding-right: 39.82%;
+    width: 100%;
+
+    }
+  }
+
+
 #payment5
 {
   align-items: center;   
@@ -428,6 +623,19 @@ width: 100%;
     padding-right: 35.42%;
     width: 100%;
 }
+
+@media only screen and (max-width: 600px) {
+  #payment5
+    {
+      align-items: center;   
+      justify-content: center;  
+      padding-left: 41.65%;
+      padding-right: 37.25%;
+      width: 100%;
+
+    }
+  }
+
 
 #carDisplay
 {
@@ -554,6 +762,16 @@ img {
   height: 60px; 
 }
 
+
+@media only screen and (max-width: 600px) {
+  #frameMap
+    {
+    padding-left: 1.6%;
+    padding-right: 8.4%;
+      width: 100%; 
+    }
+  }
+
 .contact-info iframe {
   height: 400px;
 }
@@ -610,6 +828,3 @@ footer img {
   height: 15px;
   width: 15px;
 }
-
-/* old code ends */
-
